@@ -3,28 +3,15 @@ package org.pragmatica.cluster.consensus.rabia;
 import org.awaitility.Awaitility;
 import org.junit.jupiter.api.Test;
 import org.pragmatica.cluster.consensus.ConsensusErrors;
-import org.pragmatica.cluster.net.AddressBook;
+import org.pragmatica.cluster.consensus.rabia.infrastructure.TestCluster;
 import org.pragmatica.cluster.net.NodeId;
-import org.pragmatica.cluster.net.NodeInfo;
-import org.pragmatica.cluster.net.QuorumState;
-import org.pragmatica.cluster.net.local.LocalNetwork;
-import org.pragmatica.cluster.net.netty.Serializer;
-import org.pragmatica.cluster.state.Notification;
 import org.pragmatica.cluster.state.kvstore.KVCommand;
-import org.pragmatica.cluster.state.kvstore.KVStore;
-import org.pragmatica.lang.Option;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import java.io.*;
-import java.net.SocketAddress;
 import java.time.Duration;
-import java.util.ArrayList;
-import java.util.LinkedHashMap;
 import java.util.List;
-import java.util.Map;
 import java.util.concurrent.TimeUnit;
-import java.util.function.Consumer;
 import java.util.stream.Stream;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -33,240 +20,139 @@ import static org.pragmatica.lang.io.TimeSpan.timeSpan;
 class RabiaIntegrationTest {
     private static final Logger log = LoggerFactory.getLogger(RabiaIntegrationTest.class);
 
-    /// A very simple Serializer that uses Java built-in object streams
-    /// to encode/decode snapshots of the KVStore.
-    static class TestSerializer implements Serializer {
-        @Override
-        public byte[] encode(Object msg) {
-            try (var baos = new ByteArrayOutputStream();
-                 var oos = new ObjectOutputStream(baos)) {
-                oos.writeObject(msg);
-                return baos.toByteArray();
-            } catch (IOException e) {
-                throw new RuntimeException(e);
-            }
-        }
-
-        @Override
-        @SuppressWarnings("unchecked")
-        public <T> T decode(byte[] bytes, Class<T> clazz) {
-            try (var bais = new ByteArrayInputStream(bytes);
-                 var ois = new ObjectInputStream(bais)) {
-                return (T) ois.readObject();
-            } catch (IOException | ClassNotFoundException e) {
-                throw new RuntimeException(e);
-            }
-        }
-    }
-
-    record TestAddressBook(int clusterSize) implements AddressBook {
-
-        @Override
-        public Option<NodeInfo> get(NodeId id) {
-            throw new UnsupportedOperationException("Not implemented");
-        }
-
-        @Override
-        public Option<NodeId> reverseLookup(SocketAddress socketAddress) {
-            throw new UnsupportedOperationException("Not implemented");
-        }
-    }
-
-    /// Holds a small Rabia cluster wired over a single LocalNetwork.
-    static class Cluster {
-        final LocalNetwork<RabiaProtocolMessage> network;
-        final List<NodeId> ids = new ArrayList<>();
-        final Map<NodeId, RabiaEngine<RabiaProtocolMessage, KVCommand>> engines = new LinkedHashMap<>();
-        final Map<NodeId, KVStore<String, String>> stores = new LinkedHashMap<>();
-        final TestAddressBook addressBook;
-        final TestSerializer serializer = new TestSerializer();
-
-        Cluster(int size) {
-            addressBook = new TestAddressBook(size);
-            network = new LocalNetwork<>(addressBook);
-
-            // create nodes
-            for (int i = 1; i <= size; i++) {
-                var id = NodeId.create("node-" + i);
-                ids.add(id);
-                addNewNode(id);
-            }
-            network.start();
-        }
-
-        private void quorumChange(QuorumState quorumState) {
-            engines.values()
-                   .forEach(engine -> engine.quorumState(quorumState));
-        }
-
-        void disconnect(NodeId id) {
-            network.disconnect(id);
-        }
-
-        void addNewNode(NodeId id) {
-            var store = new KVStore<String, String>(serializer);
-            var engine = new RabiaEngine<>(id, addressBook, network, store, ProtocolConfig.testConfig());
-            network.observeQuorumState(this::quorumChange);
-            network.addNode(id, engine::processMessage);
-            stores.put(id, store);
-            engines.put(id, engine);
-
-            store.observeStateChanges(new StateChangePrinter(id));
-        }
-    }
-
-    record StateChangePrinter(NodeId id) implements Consumer<Notification> {
-        private static final Logger logger = LoggerFactory.getLogger(StateChangePrinter.class);
-
-        @Override
-        public void accept(Notification notification) {
-            logger.info("Node {} received state change: {}", id, notification);
-        }
-    }
-
-    private static Map<String, String> readStorage(KVStore<String, String> store) {
-        return store.snapshot();
-    }
-
     @Test
     void threeNodeCluster_agreesAndPropagates() {
-        var c = new Cluster(3);
+        var c = new TestCluster(3);
 
-        c.engines.get(c.ids.getFirst())
-                 .startPromise()
-                 .await(timeSpan(10).seconds())
-                 .onSuccess(_ -> log.info("Successfully started node-1"))
-                 .onFailure(cause -> fail("Failed to start node-1: " + cause));
+        c.awaitStart();
 
-        c.engines.get(c.ids.get(0))
-                 .apply(List.of(new KVCommand.Put<>("k1", "v1")))
-                 .await(timeSpan(10).seconds())
-                 .onSuccess(_ -> log.info("Successfully applied command: (k1, v1)"))
-                 .onFailure(cause -> fail("Failed to apply command: (k1, v1): " + cause));
+        c.engines()
+         .get(c.getFirst())
+         .apply(List.of(new KVCommand.Put<>("k1", "v1")))
+         .await(timeSpan(10).seconds())
+         .onSuccess(_ -> log.info("Successfully applied command: (k1, v1)"))
+         .onFailure(cause -> fail("Failed to apply command: (k1, v1): " + cause));
 
         // await all three having it
         Awaitility.await()
                   .atMost(10, TimeUnit.SECONDS)
-                  .until(() -> c.stores.values()
-                                       .stream()
-                                       .allMatch(s -> "v1".equals(readStorage(s).get("k1"))));
+                  .until(() -> c.allNodesHaveValue("k1", "v1"));
 
         // submit on node2
-        c.engines.get(c.ids.get(1))
-                 .apply(List.of(new KVCommand.Put<>("k2", "v2")))
-                 .await(timeSpan(10).seconds())
-                 .onSuccess(_ -> log.info("Successfully applied command: (k2, v2)"))
-                 .onFailure(cause -> fail("Failed to apply command: (k2, v2): " + cause));
+        c.engines().get(c.ids().get(1))
+         .apply(List.of(new KVCommand.Put<>("k2", "v2")))
+         .await(timeSpan(10).seconds())
+         .onSuccess(_ -> log.info("Successfully applied command: (k2, v2)"))
+         .onFailure(cause -> fail("Failed to apply command: (k2, v2): " + cause));
 
         Awaitility.await()
                   .atMost(2, TimeUnit.SECONDS)
-                  .until(() -> c.stores.values()
-                                       .stream()
-                                       .allMatch(s -> "v2".equals(readStorage(s).get("k2"))));
+                  .until(() -> c.allNodesHaveValue("k2", "v2"));
     }
+
 
     @Test
     void fiveNodeCluster_withFailures_andSnapshotJoin() {
-        var c = new Cluster(5);
+        var c = new TestCluster(5);
 
-        c.engines.get(c.ids.get(1))
-                 .startPromise()
-                 .await(timeSpan(10).seconds())
-                 .onSuccess(_ -> log.info("Successfully started node-2"))
-                 .onFailure(cause -> fail("Failed to start node-2: " + cause));
+        c.awaitStart();
+
+        c.engines()
+         .get(c.ids().get(1))
+         .startPromise()
+         .await(timeSpan(10).seconds())
+         .onSuccess(_ -> log.info("Successfully started node-2"))
+         .onFailure(cause -> fail("Failed to start node-2: " + cause));
 
 
-        c.engines.get(c.ids.getFirst())
-                 .apply(List.of(new KVCommand.Put<>("a", "1")))
-                 .await(timeSpan(10).seconds())
-                 .onSuccess(_ -> log.info("Successfully applied command: (a, 1)"))
-                 .onFailure(cause -> fail("Failed to apply command: (a, 1): " + cause));
+        c.engines().get(c.getFirst())
+         .apply(List.of(new KVCommand.Put<>("a", "1")))
+         .await(timeSpan(10).seconds())
+         .onSuccess(_ -> log.info("Successfully applied command: (a, 1)"))
+         .onFailure(cause -> fail("Failed to apply command: (a, 1): " + cause));
 
         Awaitility.await()
                   .atMost(10, TimeUnit.SECONDS)
-                  .until(() -> c.stores.values()
-                                       .stream()
-                                       .allMatch(s -> "1".equals(readStorage(s).get("a"))));
+                  .until(() -> c.allNodesHaveValue("a", "1"));
 
         // fail node1
-        c.disconnect(c.ids.get(0));
+        c.disconnect(c.getFirst());
 
         // still quorum on 4 nodes: put b->2
-        c.engines.get(c.ids.get(1))
-                 .apply(List.of(new KVCommand.Put<>("b", "2")))
-                 .await(timeSpan(10).seconds())
-                 .onSuccess(_ -> log.info("Successfully applied command: (b, 2)"))
-                 .onFailure(cause -> fail("Failed to apply command: (b, 2): " + cause));
+        c.engines().get(c.ids().get(1))
+         .apply(List.of(new KVCommand.Put<>("b", "2")))
+         .await(timeSpan(10).seconds())
+         .onSuccess(_ -> log.info("Successfully applied command: (b, 2)"))
+         .onFailure(cause -> fail("Failed to apply command: (b, 2): " + cause));
 
         Awaitility.await()
                   .atMost(10, TimeUnit.SECONDS)
-                  .until(() -> c.ids.subList(1, 5)
-                                    .stream()
-                                    .allMatch(id -> "2".equals(readStorage(c.stores.get(id)).get("b"))));
+                  .until(() -> c.nodesHaveValue(1, 5, "b", "2"));
 
         // fail node2
-        c.disconnect(c.ids.get(1));
+        c.disconnect(c.ids().get(1));
 
         // still quorum on 3 nodes: put c->3
-        c.engines.get(c.ids.get(2))
-                 .apply(List.of(new KVCommand.Put<>("c", "3")))
-                 .await(timeSpan(10).seconds())
-                 .onSuccess(_ -> log.info("Successfully applied command: (c, 3)"))
-                 .onFailure(cause -> fail("Failed to apply command: (c, 3): " + cause));
+        c.engines()
+         .get(c.ids().get(2))
+         .apply(List.of(new KVCommand.Put<>("c", "3")))
+         .await(timeSpan(10).seconds())
+         .onSuccess(_ -> log.info("Successfully applied command: (c, 3)"))
+         .onFailure(cause -> fail("Failed to apply command: (c, 3): " + cause));
 
         Awaitility.await()
                   .atMost(10, TimeUnit.SECONDS)
-                  .until(() -> c.ids.subList(2, 5)
-                                    .stream()
-                                    .allMatch(id -> "3".equals(readStorage(c.stores.get(id)).get("c"))));
+                  .until(() -> c.nodesHaveValue(2, 5, "c", "3"));
 
         // fail node3 → only 2 left, quorum=3 ⇒ no new entries
-        c.disconnect(c.ids.get(2));
-        var beforeSize = readStorage(c.stores.get(c.ids.get(3))).size();
+        c.disconnect(c.ids().get(2));
+        var beforeSize = c.stores().get(c.ids().get(3)).snapshot().size();
 
-        c.engines.get(c.ids.get(3))
-                 .apply(List.of(new KVCommand.Put<>("d", "4")))
-                 .await(timeSpan(10).seconds())
-                 .onSuccess(_ -> fail("Should not be successful"))
-                 .onFailure(cause -> assertEquals(ConsensusErrors.nodeInactive(c.ids.get(3)), cause));
+        c.engines().get(c.ids().get(3))
+         .apply(List.of(new KVCommand.Put<>("d", "4")))
+         .await(timeSpan(2).seconds())
+         .onSuccess(_ -> fail("Should not be successful"))
+         .onFailure(cause -> assertEquals(ConsensusErrors.nodeInactive(c.ids().get(3)), cause));
 
         Awaitility.await()
                   .during(Duration.ofSeconds(1))
                   .atMost(10, TimeUnit.SECONDS)
-                  .untilAsserted(() -> assertEquals(beforeSize, readStorage(c.stores.get(c.ids.get(3))).size()));
+                  .untilAsserted(() -> assertEquals(beforeSize, c.stores().get(c.ids().get(3)).snapshot().size()));
 
         // bring up node-6 as a replacement
         var node6 = NodeId.create("node-6");
         c.addNewNode(node6);
 
-        c.engines.get(node6)
-                 .startPromise()
-                 .await(timeSpan(10).seconds())
-                 .onSuccess(_ -> log.info("Successfully started node-6"))
-                 .onFailure(cause -> fail("Failed to start node-6: " + cause));
+        c.engines()
+         .get(node6)
+         .startPromise()
+         .await(timeSpan(10).seconds())
+         .onSuccess(_ -> log.info("Successfully started node-6"))
+         .onFailure(cause -> fail("Failed to start node-6: " + cause));
 
         // node-6 should eventually have all values: a,b,c
         Awaitility.await()
                   .atMost(10, TimeUnit.SECONDS)
                   .until(() -> {
-                      var mem = readStorage(c.stores.get(node6));
+                      var mem = c.stores().get(node6).snapshot();
                       return "1".equals(mem.get("a"))
                               && "2".equals(mem.get("b"))
                               && "3".equals(mem.get("c"));
                   });
 
-        assertTrue(c.network.quorumConnected());
+        assertTrue(c.network().quorumConnected());
 
         // now nodes 4,5,6 form a quorum of 3: put e->5
-        c.engines.get(node6)
-                 .apply(List.of(new KVCommand.Put<>("e", "5")))
-                 .await(timeSpan(10).seconds())
-                 .onSuccess(_ -> log.info("Successfully applied command: (e, 5)"))
-                 .onFailure(cause -> fail("Failed to apply command: (e, 5): " + cause));
+        c.engines()
+         .get(node6)
+         .apply(List.of(new KVCommand.Put<>("e", "5")))
+         .await(timeSpan(10).seconds())
+         .onSuccess(_ -> log.info("Successfully applied command: (e, 5)"))
+         .onFailure(cause -> fail("Failed to apply command: (e, 5): " + cause));
 
         Awaitility.await()
                   .atMost(10, TimeUnit.SECONDS)
-                  .until(() -> Stream.of(c.ids.get(3), c.ids.get(4), node6)
-                                     .allMatch(id -> "5".equals(readStorage(c.stores.get(id)).get("e"))));
+                  .until(() -> Stream.of(c.ids().get(3), c.ids().get(4), node6)
+                                     .allMatch(id -> "5".equals(c.stores().get(id).snapshot().get("e"))));
     }
 }
